--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "chai-immutable": "^1.5.3",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.4",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -29,6 +30,8 @@
     ]
   },
   "dependencies": {
-    "immutable": "^3.7.5"
+    "immutable": "^3.7.5",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
