--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "history": "^1.13.1",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
@@ -32,6 +33,9 @@
   "dependencies": {
     "immutable": "^3.7.5",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-addons-pure-render-mixin": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.0",
+    "history": "^1.13.1"
   }
 }
