--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -20,6 +20,7 @@
     "history": "^1.13.1",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -31,11 +32,14 @@
     ]
   },
   "dependencies": {
+    "history": "^1.13.1",
     "immutable": "^3.7.5",
     "react": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
-    "history": "^1.13.1"
+    "redux": "^3.0.4",
+    "socket.io-client": "^1.3.7"
   }
 }
